--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container {
     background-color: #c00025;
     width: 100%;
+    height:30vh;
     max-width: 550px;
     border-radius: 15px;
     border: 2px solid grey;
@@ -20,3 +21,7 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+.buttons {
+    background-color: red;
+}
+  
